Fixed overflow issue.

--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -119,7 +119,8 @@ a.resume, section > .container > :last-child{
 
 /* resume */
 #timeline .resume {
-    text-align:left;
+	text-align:left;
+	overflow: hidden;
 }
 
 .left-pane, .right-pane{
